--- a/app/template/layouts/default.hbs
+++ b/app/template/layouts/default.hbs
@@ -6,7 +6,7 @@
     <title>{{title}} &mdash; The Trustworthy Healthcare Initiative</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="{{meta_description}}" />
-    <meta name="author" content="Nick Semenkovich (@semenko), ClinDesk &amp; White Coat Academy" />
+    <meta name="author" content="Nick Semenkovich (@semenko) &amp; David Russler-Germain (@dgermain21), ClinDesk &amp; White Coat Academy" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
 
     <!-- build:css /styles/vendor.css -->
@@ -29,7 +29,7 @@
     {{>google_analytics }}
 
     <!--[if lt IE 9]>
-    <script src="//cdn.jsdelivr.net/html5shiv/3.7.0/html5shiv.min.js"></script>
+    <script src="//cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="//cdn.jsdelivr.net/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
