New paypal link.

--- a/app/template/pages/protect-yourself/index.hbs
+++ b/app/template/pages/protect-yourself/index.hbs
@@ -73,7 +73,7 @@ meta_description: Protect your medical records online. Here are tips to secure y
                     <a class="btn btn-lg btn-default" href="https://blog.twitter.com/2013/getting-started-with-login-verification" target="_blank"><i class="fa fa-twitter fa-lg"></i>Twitter &nbsp;</a>
                 </div>
                 <div class="col-md-4 text-center">
-                    <a class="btn btn-lg btn-default" href="https://www.paypal.com/us/cgi-bin?cmd=xpt/Marketing_CommandDriven/securitycenter/PayPalSecurityKey-outside&bn_r=o" target="_blank"><i class="fa fa-paypal fa-lg"></i>Paypal &nbsp;</a>
+                    <a class="btn btn-lg btn-default" href="https://www.paypal.com/us/webapps/mpp/security/security-protections" target="_blank"><i class="fa fa-paypal fa-lg"></i>Paypal &nbsp;</a>
                 </div>
 
                 <div class="col-md-4 text-center">
